syntax = "proto3";

package com.example;

message Request {
    string in = 1;
}

message Response {
    string out = 1;
}

service TestService {
    rpc Unary(Request) returns (Response);

    rpc ServerStreaming(Request) returns (stream Response);

    rpc ClientStreaming(stream Request) returns (Response);

    rpc BidiStreaming(stream Request) returns (stream Response);
}
